--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
     <a class="page-header__logo">
       <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина «Мишка»">
     </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a href="catalog.html">Каталог товаров</a>
+          </li>
+          <li class="site-list__item">
+            <a href="order.html">Вязание на заказ</a>
+          </li>
+          <li class="site-list__item">
+            <a href="search.html">Поиск по сайту</a>
+          </li>
+          <li class="site-list__item">
+            <a href="cart.html">Корзина:пока пуста</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </header>
 
 </body>
