Добавляет разметку основного содержимого и заголовок

--- a/index.html
+++ b/index.html
@@ -30,5 +30,10 @@
     </nav>
   </header>
 
+  <main class="page-main">
+    <h1 class="page-main__heading">Милые штучки ручной работы для дома</h1>
+
+  </main>
+
 </body>
 </html>
