--- a/index.html
+++ b/index.html
@@ -32,5 +32,9 @@
     </nav>
   </header>
 
+  <main class="page-main">
+    <h1 class="page-main__heading">Милые штучки ручной работы для дома</h1>
+  </main>
+
 </body>
 </html>
