Добавляет секцию категорий товаров

--- a/index.html
+++ b/index.html
@@ -33,7 +33,22 @@
   </header>
 
   <main class="page-main">
-    <h1 class="page-main__heading">Милые штучки ручной работы для дома</h1>
+    <h1 class="page-main__title">Милые штучки ручной работы для дома</h1>
+    <section class="product-categories">
+      <h2 class="visually-hidden">Категории товаров</h2>
+      <ul class="product-categories__list product-list">
+        <li class="product-list__item product-list__item--interior">
+          <a class="product-list__link" href="interior.html">
+            <h3 class="product-list__title">Предметы интерьера</h3>
+          </a>
+        </li>
+        <li class="product-list__item product-list__item--toy">
+          <a class="product-list__link" href="toy.html">
+            <h3 class="product-list__title">Детские игрушки</h3>
+          </a>
+        </li>
+      </ul>
+    </section>
   </main>
 
 </body>
