Добавляет хедер для секции

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
     </section>
 
     <section class="product-week">
-
+      <header class="product-week__header">
+        <h2 class="product-week__title">Товар недели</h2>
+        <h3 class="product-week__title-product">Вязаные корзинки</h3>
+      </header>
     </section>
   </main>
 
