Добавляет параграф описание и таблицу описания

--- a/index.html
+++ b/index.html
@@ -55,6 +55,33 @@
         <h2 class="product-week__title">Товар недели</h2>
         <h3 class="product-week__title-product">Вязаные корзинки</h3>
       </header>
+      <p class="product-week__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+      <table class="product-week__list">
+        <tr>
+          <td>
+            Цвет:
+          </td>
+          <td>
+            «Тиффани»/серый
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Диаметр:
+          </td>
+          <td>
+            25 см
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Высота:
+          </td>
+          <td>
+            15 см
+          </td>
+        </tr>
+      </table>
     </section>
   </main>
 
