--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
           </td>
         </tr>
       </table>
+      <img class="produck-week__image" src="https://via.placeholder.com/150x150" width="260" height="315" alt="Изображение вязаных корзинок">
     </section>
   </main>
 
