Добавляет цену и кнопку заказа и исправляет ошибки в названиях

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="catalog.html">Каталог товаров</a>
           </li>
           <li class="site-list__item">
-            <a href="order.html">Вязание на заказ</a>
+            <a href="custom-work.html">Вязание на заказ</a>
           </li>
         </ul>
         <form class="main-nav__list search-form" action="https://echo.htmlacademy.ru" method="get">
@@ -82,7 +82,9 @@
           </td>
         </tr>
       </table>
-      <img class="produck-week__image" src="https://via.placeholder.com/150x150" width="260" height="315" alt="Изображение вязаных корзинок">
+      <img class="product-week__image" src="https://via.placeholder.com/150x150" width="260" height="315" alt="Изображение вязаных корзинок">
+      <p class="product-week__price">Цена: 990 руб.</p>
+      <button class="product-week__order" type="button">Заказать</button>
     </section>
   </main>
 
