Изменяет класс таблицы

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h3 class="product-week__title-product">Вязаные корзинки</h3>
       </header>
       <p class="product-week__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
-      <table class="product-week__list">
+      <table class="product-week__list-description">
         <tr>
           <td>
             Цвет:
