--- a/index.html
+++ b/index.html
@@ -86,6 +86,30 @@
       <p class="product-week__price">Цена: 990 руб.</p>
       <button class="product-week__order" type="button">Заказать</button>
     </section>
+
+    <section class="write-us">
+      <h2 class="write-us__title">Коротко о нас:</h2>
+      <ul class="write-us__list">
+        <li class="write-us__item write-us__item--flower">
+          <p class="write-us__title">Экологически чистые материалы</p>
+        </li>
+        <li class="write-us__item write-us__item--cash">
+          <p class="write-us__title">Скандинавский стиль по российской цене</p>
+        </li>
+        <li class="write-us__item write-us__item--heart">
+          <p class="write-us__title">Увеличивает лайки на фотографиях</p>
+        </li>
+        <li class="write-us__item write-us__item--clew">
+          <p class="write-us__title">Связано вручную с любовью и умилением</p>
+        </li>
+        <li class="write-us__item write-us__item--rocket">
+          <p class="write-us__title">Поддержка отечественного производителя</p>
+        </li>
+        <li class="write-us__item write-us__item--present">
+          <p class="write-us__title">Поставляется в подарочной упаковке</p>
+        </li>
+      </ul>
+    </section>
   </main>
 
 </body>
