--- a/index.html
+++ b/index.html
@@ -126,6 +126,30 @@
       <button class="reviews__write" type="button">Написвть</button>
     </section>
 
+    <section class="contacts">
+      <h2 class="contacts__title">Контакты</h2>
+      <table class="contacts__list">
+        <tr>
+          <td>
+            e-mail:
+          </td>
+          <td>
+            info@mimimishkashop.ru
+          </td>
+        </tr>
+        <tr>
+          <td>
+            адрес:
+          </td>
+          <td>
+            г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101
+          </td>
+        </tr>
+      </table>
+      <a class ="contacts__map" href="#"><img src="https://via.placeholder.com/150x150" width="320" height="457" alt="Интернет магазин «Мишка» расположен по адресу г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101"></a>
+      <a class="сontacts__feedback button" href="#">Напишите нам</a>
+    </section>
+
   </main>
 
 </body>
