--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <button class="reviews__prev" type="button">Предыдущий отзыв</button>
         <button class="reviews__next" type="button">Следующий отзыв</button>
       </div>
-      <button class="reviews__write" type="button">Написвть</button>
+      <a class="button reviews__write" href="reviews-form.html">Написать</a>
     </section>
 
     <section class="contacts">
@@ -147,7 +147,7 @@
         </tr>
       </table>
       <a class ="contacts__map" href="#"><img src="https://via.placeholder.com/150x150" width="320" height="457" alt="Интернет магазин «Мишка» расположен по адресу г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101"></a>
-      <a class="сontacts__feedback button" href="#">Напишите нам</a>
+      <a class="button сontacts__feedback" href="feedback-form.html">Напишите нам</a>
     </section>
   </main>
 
@@ -173,5 +173,29 @@
     </div>
   </footer>
 
+  <!--попапы-->
+  <section class="modal cart-add">
+    <h2 class="cart-add__title">Добавить в корзину</h2>
+    <form class="cart-add__form" action="https://echo.htmlacademy.ru" method="get">
+      <fieldset class="cart-add__choice choice">
+        <legend class="choice__title">Выберите размер:</legend>
+        <ul class="choice__list">
+          <li class="choice__item">
+            <input class="choice__flag" type="checkbox" name="S" id="checkbox-s">
+            <label class="choice__name" for="checkbox-s">S</label>
+          </li>
+          <li class="choice__item">
+            <input class="choice__flag" type="checkbox" name="M" id="checkbox-m">
+            <label class="choice__name" for="checkbox-m">M</label>
+          </li>
+          <li class="choice__item">
+            <input class="choice__flag" type="checkbox" name="L" id="checkbox-l">
+            <label class="choice__name" for="checkbox-l">L</label>
+          </li>
+        </ul>
+      </fieldset>
+      <button class="button cart-add__add" type="submit">Добавить</button>
+    </form>
+  </section>
 </body>
 </html>
