добавляет секцию Списка товаров

--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,38 @@
   </header>
 
   <main class="page-main">
+    <h1 class="page-main__title">Каталог товаров</h1>
+    <section class="catalog">
+      <h2 class="visually-hidden">Список товаров</h2>
+      <ul class="catalog__list">
+        <li class="catalog__item item">
+          <a class="item__link">
+            <img class="item__image" src="https://via.placeholder.com/150x150" width="260" height="195" alt="Фотография игрушки Зайчик-попрыгайчик">
+            <h3 class="item__title">Зайчик-попрыгайчик</h3>
+            <p class="item__description">Рост 30 см, вес 200 г</p>
+            <b class="item__price">1 200 руб.</b>
+          </a>
+        </li>
+        <li class="catalog__item item">
+          <a class="item__link">
+            <img class="item__image" src="https://via.placeholder.com/150x150" width="260" height="195" alt="Фотография вязаной корзинки для белья">
+            <h3 class="item__title">Корзинка для белья</h3>
+            <p class="item__description">Диаметр 15 см, высота 10 см</p>
+            <b class="item__price">690 руб.</b>
+          </a>
+        </li>
+        <li class="catalog__item item">
+          <a class="item__link">
+            <img class="item__image" src="https://via.placeholder.com/150x150" width="260" height="195" alt="Фотография большой вязаной корзинки для игрушек">
+            <h3 class="item__title">Большая корзинка для игрушек</h3>
+            <p class="item__description">Диаметр 30 см, высота 30 см</p>
+            <b class="item__price">1 500 руб.</b>
+          </a>
+        </li>
 
+
+      </ul>
+    </section>
   </main>
 
   <footer class="page-footer">
