--- a/catalog.html
+++ b/catalog.html
@@ -61,9 +61,18 @@
             <b class="item__price">1 500 руб.</b>
           </a>
         </li>
-
-
       </ul>
+    </section>
+
+    <section class="production">
+      <h2 class="production__title">Процесс производства</h2>
+      <video class="production__video video" controls>
+        <source src="video.mp4" type="video/mp4">
+        <source src="video.ogg" type="video/ogg">
+        <source src="video.webm" type="video/webm">
+      </video>
+      <p class="video__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+      <button class="production__order" type="button">Сделать заказ</button>
     </section>
   </main>
 
