Вносит правки в страницу каталога

--- a/catalog.html
+++ b/catalog.html
@@ -2,12 +2,12 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Интернет магазин «Мишка»</title>
+  <title>Каталог товаров. Интернет магазин «Мишка»</title>
 </head>
 <body>
   <header class="page-header">
     <nav class="main-nav">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="index.html">
         <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина «Мишка»">
       </a>
       <button class="main-nav__toggle" type="button">Открыть меню</button>
