--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="catalog.html">Каталог товаров</a>
           </li>
           <li class="site-list__item">
-            <a href="custom-work.html">Вязание на заказ</a>
+            <a href="form.html">Вязание на заказ</a>
           </li>
         </ul>
         <form class="main-nav__list search-form" action="https://echo.htmlacademy.ru" method="get">
