--- a/source/index.html
+++ b/source/index.html
@@ -112,16 +112,20 @@
     </section>
 
     <section class="reviews">
-      <h2 class="reviews__title">Отзывы</h2>
-      <div class="reviews__list slider__list">
-        <blockquote class="reviews__item  slider__item">
-          <cite class="reviews__author-name">Анастасия Красильникова
-            <span class="reviews__author-email">@missssskras</span>
-          </cite>
-          <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
-        </blockquote>
-        <button class="reviews__prev" type="button">Предыдущий отзыв</button>
-        <button class="reviews__next" type="button">Следующий отзыв</button>
+      <div class="reviews__wrapper slider">
+        <h2 class="reviews__title">Отзывы</h2>
+        <div class="reviews__list slider__list">
+          <blockquote class="reviews__item slider-item">
+            <cite class="reviews__author-name">Анастасия Красильникова
+              <span class="reviews__author-email">@missssskras</span>
+            </cite>
+            <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+          </blockquote>
+        </div>
+        <p class="reviews__buttons slider__buttons">
+          <button class="reviews__prev" type="button">Предыдущий отзыв</button>
+          <button class="reviews__next" type="button">Следующий отзыв</button>
+        </p>
       </div>
       <a class="button reviews__write" href="reviews-form.html">Написать</a>
     </section>
