--- a/source/catalog.html
+++ b/source/catalog.html
@@ -66,12 +66,12 @@
 
     <section class="production">
       <h2 class="production__title">Процесс производства</h2>
-      <video class="production__video video" controls>
+      <video class="production__video" controls>
         <source src="video.mp4" type="video/mp4">
         <source src="video.ogg" type="video/ogg">
         <source src="video.webm" type="video/webm">
       </video>
-      <p class="video__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+      <p class="production__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
       <button class="production__order" type="button">Сделать заказ</button>
     </section>
   </main>
