Добавляет в форму группу полей Цвет

--- a/source/form.html
+++ b/source/form.html
@@ -40,12 +40,42 @@
         <legend>Тип</legend>
         <ul class="form__list">
           <li class="form__option">
-            <input type="radio" name="type" id="type-accessory" value="accessory">
+            <input class="form__field" type="radio" name="type" id="type-accessory" value="accessory">
             <label for="type-accessory">Аксессуар для интерьера</label>
           </li>
           <li class="form__option">
-            <input type="radio" name="type" id="type-toy" value="toy">
+            <input class="form__field" type="radio" name="type" id="type-toy" value="toy">
             <label for="type-toy">Детская игрушка</label>
+          </li>
+        </ul>
+      </fieldset>
+
+      <fieldset class="form__fieldset">
+        <legend>Цвет</legend>
+        <ul class="form__list">
+          <li class="form-option">
+            <input class="form__field" type="checkbox" name="white" id="checkbox-white" checked>
+            <label for="checkbox-white">Белый</label>
+          </li>
+          <li class="form-option">
+            <input class="form__field" type="checkbox" name="grey" id="checkbox-grey" checked>
+            <label for="checkbox-grey">Серый</label>
+          </li>
+          <li class="form-option">
+            <input class="form__field" type="checkbox" name="tiffany" id="checkbox-tiffany">
+            <label for="checkbox-tiffany">«Тиффани»</label>
+          </li>
+          <li class="form-option">
+            <input class="form__field" type="checkbox" name="black" id="checkbox-black">
+            <label for="checkbox-black">Ченый</label>
+          </li>
+          <li class="form-option">
+            <input class="form__field" type="checkbox" name="pink" id="checkbox-pink">
+            <label for="checkbox-pink">Розовый</label>
+          </li>
+          <li class="form-option">
+            <input class="form__field" type="checkbox" name="orange" id="checkbox-orange">
+            <label for="checkbox-orange">Оранжевый</label>
           </li>
         </ul>
       </fieldset>
