Добавляет в форму группу полей ФИО

--- a/source/form.html
+++ b/source/form.html
@@ -80,6 +80,24 @@
         </ul>
       </fieldset>
 
+      <fieldset class="form__fieldset">
+        <legend>ФИО</legend>
+        <ul class="form__list">
+          <li class="form__option">
+            <label for="name-field"><b>Имя:</b></label>
+            <input class="form__field" id="name-field" type="text" name="name" placeholder="Введите ваше имя*">
+          </li>
+          <li class="form__option">
+            <label for="surname-field"><b>Фамилия:</b></label>
+            <input class="form__field" id="surname-field" type="text" name="surname" placeholder="Укажите фамилию*">
+          </li>
+          <li class="form__option">
+            <label for="patronymic-field"><b>Отчество:</b></label>
+            <input class="form__field" id="patronymic-field" type="text" name="patronymic" placeholder="Отчество, если желаете">
+          </li>
+        </ul>
+      </fieldset>
+
     </form>
   </main>
 
