Добавляет в форму поле Тел

--- a/source/form.html
+++ b/source/form.html
@@ -98,6 +98,11 @@
         </ul>
       </fieldset>
 
+      <fieldset class="form__fieldset">
+        <legend>Тел</legend>
+        <input class="form__field" type="tel" name="phone" placeholder="+7 XXX XXX XX XX*" required>
+      </fieldset>
+
     </form>
   </main>
 
