Добавляет в форму поле email

--- a/source/form.html
+++ b/source/form.html
@@ -103,6 +103,11 @@
         <input class="form__field" type="tel" name="phone" placeholder="+7 XXX XXX XX XX*" required>
       </fieldset>
 
+      <fieldset class="form__fieldset">
+        <legend>E-mail</legend>
+        <input class="form__field" type="email" name="email" placeholder="Ваш Email*" required>
+      </fieldset>
+
     </form>
   </main>
 
