Добавляет в форму поле ДОП, параграф-сноску и кнопку отправки

--- a/source/form.html
+++ b/source/form.html
@@ -108,6 +108,12 @@
         <input class="form__field" type="email" name="email" placeholder="Ваш Email*" required>
       </fieldset>
 
+      <fieldset class="form__fieldset">
+        <legend>Доп</legend>
+        <textarea class="form__field" name="text" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+      </fieldset>
+      <p class="form__notice">*Поля обязательны для заполнения</p>
+      <button class="button form__button" type="submit">Отправить заказ</button>
     </form>
   </main>
 
