Добавляет доп классы группе полей Тип

--- a/source/form.html
+++ b/source/form.html
@@ -36,15 +36,15 @@
     <h1 class="page-main__title">Вязание на заказ</h1>
     <p class="page-main__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
     <form class="page-main__form form" action="https://echo.htmlacademy.ru" method="post">
-      <fieldset class="form__fieldset">
+      <fieldset class="form__fieldset fieldset-type">
         <legend>Тип</legend>
-        <ul class="form__list">
-          <li class="form__option">
-            <input class="form__field" type="radio" name="type" id="type-accessory" value="accessory">
+        <ul class="form__list fieldset-type__list">
+          <li class="form__option fieldset-type__option">
+            <input class="form__field fieldset-type__field" type="radio" name="type" id="type-accessory" value="accessory">
             <label for="type-accessory">Аксессуар для интерьера</label>
           </li>
-          <li class="form__option">
-            <input class="form__field" type="radio" name="type" id="type-toy" value="toy">
+          <li class="form__option fieldset-type__option">
+            <input class="form__field fieldset-type__field" type="radio" name="type" id="type-toy" value="toy">
             <label for="type-toy">Детская игрушка</label>
           </li>
         </ul>
