Добавляет доп классы группе полей Цвет

--- a/source/form.html
+++ b/source/form.html
@@ -50,31 +50,31 @@
         </ul>
       </fieldset>
 
-      <fieldset class="form__fieldset">
+      <fieldset class="form__fieldset fieldset-color">
         <legend>Цвет</legend>
-        <ul class="form__list">
-          <li class="form-option">
-            <input class="form__field" type="checkbox" name="white" id="checkbox-white" checked>
+        <ul class="form__list fieldset-color__list">
+          <li class="form-option fieldset-color__option">
+            <input class="form__field fieldset-color__field" type="checkbox" name="white" id="checkbox-white" checked>
             <label for="checkbox-white">Белый</label>
           </li>
-          <li class="form-option">
-            <input class="form__field" type="checkbox" name="grey" id="checkbox-grey" checked>
+          <li class="form-option fieldset-color__option">
+            <input class="form__field fieldset-color__field" type="checkbox" name="grey" id="checkbox-grey" checked>
             <label for="checkbox-grey">Серый</label>
           </li>
-          <li class="form-option">
-            <input class="form__field" type="checkbox" name="tiffany" id="checkbox-tiffany">
+          <li class="form-option fieldset-color__option">
+            <input class="form__field fieldset-color__field" type="checkbox" name="tiffany" id="checkbox-tiffany">
             <label for="checkbox-tiffany">«Тиффани»</label>
           </li>
-          <li class="form-option">
-            <input class="form__field" type="checkbox" name="black" id="checkbox-black">
+          <li class="form-option fieldset-color__option">
+            <input class="form__field fieldset-color__field" type="checkbox" name="black" id="checkbox-black">
             <label for="checkbox-black">Ченый</label>
           </li>
-          <li class="form-option">
-            <input class="form__field" type="checkbox" name="pink" id="checkbox-pink">
+          <li class="form-option fieldset-color__option">
+            <input class="form__field fieldset-color__field" type="checkbox" name="pink" id="checkbox-pink">
             <label for="checkbox-pink">Розовый</label>
           </li>
-          <li class="form-option">
-            <input class="form__field" type="checkbox" name="orange" id="checkbox-orange">
+          <li class="form-option fieldset-color__option">
+            <input class="form__field fieldset-color__field" type="checkbox" name="orange" id="checkbox-orange">
             <label for="checkbox-orange">Оранжевый</label>
           </li>
         </ul>
