--- a/source/form.html
+++ b/source/form.html
@@ -80,20 +80,20 @@
         </ul>
       </fieldset>
 
-      <fieldset class="form__fieldset">
+      <fieldset class="form__fieldset fieldset-fullname">
         <legend>ФИО</legend>
-        <ul class="form__list">
-          <li class="form__option">
+        <ul class="form__list fieldset-fullname__list">
+          <li class="form__option fieldset-fullname__option">
             <label for="name-field"><b>Имя:</b></label>
-            <input class="form__field" id="name-field" type="text" name="name" placeholder="Введите ваше имя*">
+            <input class="form__field fieldset-fullname__field" id="name-field" type="text" name="name" placeholder="Введите ваше имя*">
           </li>
-          <li class="form__option">
+          <li class="form__option fieldset-fullname__option">
             <label for="surname-field"><b>Фамилия:</b></label>
-            <input class="form__field" id="surname-field" type="text" name="surname" placeholder="Укажите фамилию*">
+            <input class="form__field fieldset-fullname__field" id="surname-field" type="text" name="surname" placeholder="Укажите фамилию*">
           </li>
-          <li class="form__option">
+          <li class="form__option fieldset-fullname__option">
             <label for="patronymic-field"><b>Отчество:</b></label>
-            <input class="form__field" id="patronymic-field" type="text" name="patronymic" placeholder="Отчество, если желаете">
+            <input class="form__field fieldset-fullname__field" id="patronymic-field" type="text" name="patronymic" placeholder="Отчество, если желаете">
           </li>
         </ul>
       </fieldset>
