Добавляет доп классы в поля тел, email, ДОП-инфо

--- a/source/form.html
+++ b/source/form.html
@@ -98,19 +98,19 @@
         </ul>
       </fieldset>
 
-      <fieldset class="form__fieldset">
+      <fieldset class="form__fieldset fieldset-tel">
         <legend>Тел</legend>
-        <input class="form__field" type="tel" name="phone" placeholder="+7 XXX XXX XX XX*" required>
+        <input class="form__field fieldset-tel__field" type="tel" name="phone" placeholder="+7 XXX XXX XX XX*" required>
       </fieldset>
 
-      <fieldset class="form__fieldset">
+      <fieldset class="form__fieldset fieldset-email">
         <legend>E-mail</legend>
-        <input class="form__field" type="email" name="email" placeholder="Ваш Email*" required>
+        <input class="form__field fieldset-email__field" type="email" name="email" placeholder="Ваш Email*" required>
       </fieldset>
 
-      <fieldset class="form__fieldset">
+      <fieldset class="form__fieldset fieldset-info">
         <legend>Доп</legend>
-        <textarea class="form__field" name="text" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+        <textarea class="form__field fieldset-info__field" name="additional-info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
       </fieldset>
       <p class="form__notice">*Поля обязательны для заполнения</p>
       <button class="button form__button" type="submit">Отправить заказ</button>
