--- a/source/index.html
+++ b/source/index.html
@@ -83,7 +83,7 @@
           </td>
         </tr>
       </table>
-      <img class="product-week__image" src="https://via.placeholder.com/150x150" width="260" height="315" alt="Изображение вязаных корзинок">
+      <img class="product-week__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Изображение вязаных корзинок">
       <p class="product-week__price">Цена: 990 руб.</p>
       <button class="product-week__order" type="button">Заказать</button>
     </section>
