Добавляет контентное изображение

--- a/source/index.html
+++ b/source/index.html
@@ -92,22 +92,22 @@
       <h2 class="write-us__title">Коротко о нас:</h2>
       <ul class="write-us__list">
         <li class="write-us__item write-us__item--flower">
-          <p class="write-us__title">Экологически чистые материалы</p>
+          <p class="write-us__item-title">Экологически чистые материалы</p>
         </li>
         <li class="write-us__item write-us__item--cash">
-          <p class="write-us__title">Скандинавский стиль по российской цене</p>
+          <p class="write-us__item-title">Скандинавский стиль по российской цене</p>
         </li>
         <li class="write-us__item write-us__item--heart">
-          <p class="write-us__title">Увеличивает лайки на фотографиях</p>
+          <p class="write-us__item-title">Увеличивает лайки на фотографиях</p>
         </li>
         <li class="write-us__item write-us__item--clew">
-          <p class="write-us__title">Связано вручную с любовью и умилением</p>
+          <p class="write-us__item-title">Связано вручную с любовью и умилением</p>
         </li>
         <li class="write-us__item write-us__item--rocket">
-          <p class="write-us__title">Поддержка отечественного производителя</p>
+          <p class="write-us__item-title">Поддержка отечественного производителя</p>
         </li>
         <li class="write-us__item write-us__item--present">
-          <p class="write-us__title">Поставляется в подарочной упаковке</p>
+          <p class="write-us__item-title">Поставляется в подарочной упаковке</p>
         </li>
       </ul>
     </section>
