--- a/source/index.html
+++ b/source/index.html
@@ -151,7 +151,7 @@
           </td>
         </tr>
       </table>
-      <a class ="contacts__map" href="#"><img src="https://via.placeholder.com/150x150" width="320" height="457" alt="Интернет магазин «Мишка» расположен по адресу г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101"></a>
+      <a class ="contacts__map" href="#"><img src="img/map-mobile@1x.jpg" width="320" height="457" alt="Интернет магазин «Мишка» расположен по адресу г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101"></a>
       <a class="button сontacts__button-feedback" href="feedback-form.html">Напишите нам</a>
     </section>
   </main>
