Временно прячет попап

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -100,7 +100,7 @@
   </footer>
 
   <!--попапы-->
-  <section class="modal cart-add">
+  <section class="modal cart-add visually-hidden">
     <h2 class="cart-add__title">Добавить в корзину</h2>
     <form class="cart-add__form" action="https://echo.htmlacademy.ru" method="get">
       <fieldset class="cart-add__choice choice">
