--- a/source/catalog.html
+++ b/source/catalog.html
@@ -33,14 +33,14 @@
     </nav>
   </header>
 
-  <main class="page-main">
-    <h1 class="page-main__title">Каталог товаров</h1>
+  <main class="page-main-catalog">
+    <h1 class="page-main-catalog__title">Каталог товаров</h1>
     <section class="catalog">
       <h2 class="visually-hidden">Список товаров</h2>
       <ul class="catalog__list">
         <li class="catalog__item item">
           <a class="item__link">
-            <img class="item__image" src="https://via.placeholder.com/150x150" width="260" height="195" alt="Фотография игрушки Зайчик-попрыгайчик">
+            <img class="item__image" src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="Фотография игрушки Зайчик-попрыгайчик">
             <h3 class="item__title">Зайчик-попрыгайчик</h3>
             <p class="item__description">Рост 30 см, вес 200 г</p>
             <b class="item__price">1 200 руб.</b>
@@ -48,7 +48,7 @@
         </li>
         <li class="catalog__item item">
           <a class="item__link">
-            <img class="item__image" src="https://via.placeholder.com/150x150" width="260" height="195" alt="Фотография вязаной корзинки для белья">
+            <img class="item__image" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Фотография вязаной корзинки для белья">
             <h3 class="item__title">Корзинка для белья</h3>
             <p class="item__description">Диаметр 15 см, высота 10 см</p>
             <b class="item__price">690 руб.</b>
@@ -56,7 +56,7 @@
         </li>
         <li class="catalog__item item">
           <a class="item__link">
-            <img class="item__image" src="https://via.placeholder.com/150x150" width="260" height="195" alt="Фотография большой вязаной корзинки для игрушек">
+            <img class="item__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Фотография большой вязаной корзинки для игрушек">
             <h3 class="item__title">Большая корзинка для игрушек</h3>
             <p class="item__description">Диаметр 30 см, высота 30 см</p>
             <b class="item__price">1 500 руб.</b>
