--- a/source/form.html
+++ b/source/form.html
@@ -9,16 +9,16 @@
   <header class="page-header">
     <nav class="main-nav">
       <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина «Мишка»">
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина «Мишка»">
       </a>
       <button class="main-nav__toggle" type="button">Открыть меню</button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a href="catalog.html">Каталог товаров</a>
+            <a class="main-nav__link" href="catalog.html">Каталог товаров</a>
           </li>
           <li class="site-list__item">
-            <a href="form.html">Вязание на заказ</a>
+            <a class="main-nav__link" href="form.html">Вязание на заказ</a>
           </li>
         </ul>
         <form class="main-nav__list search-form" action="https://echo.htmlacademy.ru" method="get">
@@ -26,17 +26,17 @@
         </form>
         <ul class="main-nav__list user-list">
           <li class="user-list__item">
-            <a href="cart.html">Корзина:пока пуста</a>
+            <a class="main-nav__link" href="cart.html">Корзина: пока пуста</a>
           </li>
         </ul>
       </div>
     </nav>
   </header>
 
-  <main class="page-main">
-    <h1 class="page-main__title">Вязание на заказ</h1>
-    <p class="page-main__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
-    <form class="page-main__form form" action="https://echo.htmlacademy.ru" method="post">
+  <main class="page-main-order">
+    <h1 class="page-main-order__title">Вязание на заказ</h1>
+    <p class="page-main-order__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+    <form class="page-main-order__form form" action="https://echo.htmlacademy.ru" method="post">
       <fieldset class="form__fieldset fieldset-type">
         <legend>Тип</legend>
         <ul class="form__list fieldset-type__list">
