--- a/source/catalog.html
+++ b/source/catalog.html
@@ -67,7 +67,7 @@
 
     <section class="production">
       <h2 class="production__title">Процесс производства</h2>
-      <video class="production__video" controls>
+      <video class="production__video" width="260" height="150" poster="img/video-mobile@1x.jpg" controls>
         <source src="video.mp4" type="video/mp4">
         <source src="video.ogg" type="video/ogg">
         <source src="video.webm" type="video/webm">
