--- a/source/form.html
+++ b/source/form.html
@@ -38,79 +38,79 @@
     <p class="page-main-order__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
     <form class="page-main-order__form form" action="https://echo.htmlacademy.ru" method="post">
       <fieldset class="form__fieldset fieldset-type">
-        <legend>Тип</legend>
+        <legend class="form__legend fieldset-type__legend">Тип</legend>
         <ul class="form__list fieldset-type__list">
           <li class="form__option fieldset-type__option">
             <input class="form__field fieldset-type__field" type="radio" name="type" id="type-accessory" value="accessory">
-            <label for="type-accessory">Аксессуар для интерьера</label>
+            <label class="form__label fieldset-type__label" for="type-accessory">Аксессуар для интерьера</label>
           </li>
           <li class="form__option fieldset-type__option">
             <input class="form__field fieldset-type__field" type="radio" name="type" id="type-toy" value="toy">
-            <label for="type-toy">Детская игрушка</label>
+            <label class="form__label fieldset-toy__label" for="type-toy">Детская игрушка</label>
           </li>
         </ul>
       </fieldset>
 
       <fieldset class="form__fieldset fieldset-color">
-        <legend>Цвет</legend>
+        <legend class="form__legend fieldset-color__legend">Цвет</legend>
         <ul class="form__list fieldset-color__list">
           <li class="form-option fieldset-color__option">
             <input class="form__field fieldset-color__field" type="checkbox" name="white" id="checkbox-white" checked>
-            <label for="checkbox-white">Белый</label>
+            <label class="form__label fieldset-color__label" for="checkbox-white">Белый</label>
           </li>
           <li class="form-option fieldset-color__option">
             <input class="form__field fieldset-color__field" type="checkbox" name="grey" id="checkbox-grey" checked>
-            <label for="checkbox-grey">Серый</label>
+            <label class="form__label fieldset-color__label" for="checkbox-grey">Серый</label>
           </li>
           <li class="form-option fieldset-color__option">
             <input class="form__field fieldset-color__field" type="checkbox" name="tiffany" id="checkbox-tiffany">
-            <label for="checkbox-tiffany">«Тиффани»</label>
+            <label class="form__label fieldset-color__label" for="checkbox-tiffany">«Тиффани»</label>
           </li>
           <li class="form-option fieldset-color__option">
             <input class="form__field fieldset-color__field" type="checkbox" name="black" id="checkbox-black">
-            <label for="checkbox-black">Ченый</label>
+            <label class="form__label fieldset-color__label" for="checkbox-black">Ченый</label>
           </li>
           <li class="form-option fieldset-color__option">
             <input class="form__field fieldset-color__field" type="checkbox" name="pink" id="checkbox-pink">
-            <label for="checkbox-pink">Розовый</label>
+            <label class="form__label fieldset-color__label" for="checkbox-pink">Розовый</label>
           </li>
           <li class="form-option fieldset-color__option">
             <input class="form__field fieldset-color__field" type="checkbox" name="orange" id="checkbox-orange">
-            <label for="checkbox-orange">Оранжевый</label>
+            <label class="form__label fieldset-color__label" for="checkbox-orange">Оранжевый</label>
           </li>
         </ul>
       </fieldset>
 
       <fieldset class="form__fieldset fieldset-fullname">
-        <legend>ФИО</legend>
+        <legend class="form__legend fieldset-fullname__legend">ФИО</legend>
         <ul class="form__list fieldset-fullname__list">
           <li class="form__option fieldset-fullname__option">
-            <label for="name-field"><b>Имя:</b></label>
+            <label class="form__label fieldset-fullname__label" for="name-field"><b>Имя:</b></label>
             <input class="form__field fieldset-fullname__field" id="name-field" type="text" name="name" placeholder="Введите ваше имя*" required>
           </li>
           <li class="form__option fieldset-fullname__option">
-            <label for="surname-field"><b>Фамилия:</b></label>
+            <label class="form__label fieldset-fullname__label" for="surname-field"><b>Фамилия:</b></label>
             <input class="form__field fieldset-fullname__field" id="surname-field" type="text" name="surname" placeholder="Укажите фамилию*" required>
           </li>
           <li class="form__option fieldset-fullname__option">
-            <label for="patronymic-field"><b>Отчество:</b></label>
+            <label class="form__label fieldset-fullname__label" for="patronymic-field"><b>Отчество:</b></label>
             <input class="form__field fieldset-fullname__field" id="patronymic-field" type="text" name="patronymic" placeholder="Отчество, если желаете" required>
           </li>
         </ul>
       </fieldset>
 
       <fieldset class="form__fieldset fieldset-tel">
-        <legend>Тел</legend>
+        <legend class="form__legend fieldset-tel__legend">Тел</legend>
         <input class="form__field fieldset-tel__field" type="tel" name="phone" placeholder="+7 XXX XXX XX XX*" required>
       </fieldset>
 
       <fieldset class="form__fieldset fieldset-email">
-        <legend>E-mail</legend>
+        <legend class="form__legend fieldset-email__legend">E-mail</legend>
         <input class="form__field fieldset-email__field" type="email" name="email" placeholder="Ваш Email*" required>
       </fieldset>
 
       <fieldset class="form__fieldset fieldset-info">
-        <legend>Доп</legend>
+        <legend class="form__legend fieldset-info__legend">Доп</legend>
         <textarea class="form__field fieldset-info__field" name="additional-info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
       </fieldset>
       <p class="form__notice">*Поля обязательны для заполнения</p>
