--- a/source/index.html
+++ b/source/index.html
@@ -2,34 +2,37 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Интернет магазин «Мишка»</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <header class="page-header">
-    <a class="page-header__logo">
-      <img class="page-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина «Мишка»">
-    </a>
-    <div class="page-header__nav main-nav">
-      <button class="main-nav__toggle" type="button">Открыть меню</button>
-      <nav class="main-nav__site">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a class="main-nav__link" href="catalog.html">Каталог товаров</a>
-          </li>
-          <li class="site-list__item">
-            <a class="main-nav__link" href="form.html">Вязание на заказ</a>
+    <div class="page-header__wrapper">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина «Мишка»">
+      </a>
+      <div class="page-header__nav main-nav">
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <nav class="main-nav__site">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item">
+              <a class="main-nav__link" href="catalog.html">Каталог товаров</a>
+            </li>
+            <li class="site-list__item">
+              <a class="main-nav__link" href="form.html">Вязание на заказ</a>
+            </li>
+          </ul>
+        </nav>
+        <form class="main-nav__list search-form" action="https://echo.htmlacademy.ru" method="get">
+          <input class="search-form__item" type="search" name="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту">
+        </form>
+        <ul class="main-nav__list user-list">
+          <li class="user-list__item">
+            <a class="main-nav__link" href="cart.html">Корзина: пока пуста</a>
           </li>
         </ul>
-      </nav>
-      <form class="main-nav__list search-form" action="https://echo.htmlacademy.ru" method="get">
-        <input class="search-form__item" type="search" name="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту">
-      </form>
-      <ul class="main-nav__list user-list">
-        <li class="user-list__item">
-          <a class="main-nav__link" href="cart.html">Корзина: пока пуста</a>
-        </li>
-      </ul>
+      </div>
     </div>
   </header>
 
