--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,7 @@
 <body>
   <header class="page-header">
     <div class="page-header__wrapper">
-      <a class="page-header__logo" href="index.html">
+      <a class="page-header__logo" href="index.html" title="Ссылка на главную страницу">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина «Мишка»">
       </a>
       <div class="page-header__nav main-nav">
