--- a/source/form.html
+++ b/source/form.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <title>Вязание на заказ. Интернет магазин «Мишка»</title>
   <link href="css/style.css" rel="stylesheet">
