--- a/source/index.html
+++ b/source/index.html
@@ -127,35 +127,41 @@
           </blockquote>
         </div>
         <p class="reviews__buttons slider__buttons">
-          <button class="reviews__prev" type="button">Предыдущий отзыв</button>
-          <button class="reviews__next" type="button">Следующий отзыв</button>
+          <button class="reviews__prev" type="button">
+            <span class="visually-hidden">Предыдущий отзыв</span>
+          </button>
+          <button class="reviews__next" type="button">
+            <span class="visually-hidden">Следующий отзыв</span>
+          </button>
         </p>
       </div>
       <a class="button reviews__write" href="reviews-form.html">Написать</a>
     </section>
 
     <section class="contacts">
-      <h2 class="contacts__title">Контакты</h2>
-      <table class="contacts__list">
-        <tr>
-          <td>
-            e-mail:
-          </td>
-          <td>
-            info@mimimishkashop.ru
-          </td>
-        </tr>
-        <tr>
-          <td>
-            адрес:
-          </td>
-          <td>
-            г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101
-          </td>
-        </tr>
-      </table>
-      <a class ="contacts__map" href="#"><img src="img/map-mobile@1x.jpg" width="320" height="457" alt="Интернет магазин «Мишка» расположен по адресу г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101"></a>
-      <a class="button сontacts__button-feedback" href="feedback-form.html">Напишите нам</a>
+      <div class="contacts__wrapper">
+        <h2 class="contacts__title">Контакты</h2>
+        <table class="contacts__list">
+          <tr>
+            <td>
+              e-mail:
+            </td>
+            <td>
+              info@mimimishkashop.ru
+            </td>
+          </tr>
+          <tr>
+            <td>
+              адрес:
+            </td>
+            <td>
+              г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101
+            </td>
+          </tr>
+        </table>
+      </div>
+      <a class ="contacts__map" href="#"><img class="contacts__img" src="img/map-mobile@1x.jpg" width="320" height="457" alt="Интернет магазин «Мишка» расположен по адресу г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101"></a>
+      <a class="button contacts__button-feedback" href="feedback-form.html">Напишите нам</a>
     </section>
   </main>
 
