Изменяет разметку страницы формы

--- a/source/form.html
+++ b/source/form.html
@@ -37,7 +37,7 @@
   </header>
 
   <main class="page-main-order">
-    <h1 class="page-main-order__title">Вязание на заказ</h1>
+    <h1 class="page-main-order__title"><span>Вязание на заказ</span></h1>
     <p class="page-main-order__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
     <form class="page-main-order__form form" action="https://echo.htmlacademy.ru" method="post">
       <fieldset class="form__fieldset fieldset-type">
@@ -49,7 +49,7 @@
           </li>
           <li class="form__option fieldset-type__option">
             <input class="form__field fieldset-type__field" type="radio" name="type" id="type-toy" value="toy">
-            <label class="form__label fieldset-toy__label" for="type-toy">Детская игрушка</label>
+            <label class="form__label fieldset-type__label" for="type-toy">Детская игрушка</label>
           </li>
         </ul>
       </fieldset>
