--- a/source/index.html
+++ b/source/index.html
@@ -60,28 +60,28 @@
         <h3 class="product-week__title-product">Вязаные корзинки</h3>
       </header>
       <p class="product-week__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
-      <table class="product-week__list-description">
-        <tr>
-          <td>
+      <table class="product-week__list-description table-description">
+        <tr class="product-week__row table-description__row">
+          <td class="product-week__column1 table-description__column1">
             Цвет:
           </td>
-          <td>
+          <td class="product-week__column2 table-description__column2">
             «Тиффани»/серый
           </td>
         </tr>
-        <tr>
-          <td>
+        <tr class="product-week__row table-description__row">
+          <td  class="product-week__column1 table-description__column1">
             Диаметр:
           </td>
-          <td>
+          <td  class="product-week__column2 table-description__column2">
             25 см
           </td>
         </tr>
-        <tr>
-          <td>
+        <tr class="product-week__row table-description__row">
+          <td  class="product-week__column1 table-description__column1">
             Высота:
           </td>
-          <td>
+          <td class="product-week__column2 table-description__column2">
             15 см
           </td>
         </tr>
@@ -141,24 +141,14 @@
     <section class="contacts">
       <div class="contacts__wrapper">
         <h2 class="contacts__title">Контакты</h2>
-        <table class="contacts__list">
-          <tr>
-            <td>
-              e-mail:
-            </td>
-            <td>
-              info@mimimishkashop.ru
-            </td>
-          </tr>
-          <tr>
-            <td>
-              адрес:
-            </td>
-            <td>
-              г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101
-            </td>
-          </tr>
-        </table>
+        <div class="contacts__list">
+          <p class="contacts__email">e-mail:
+            <a>info@mimimishkashop.ru</a>
+          </p>
+          <p class="contacts__address">адрес:
+            <span>г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</span>
+          </p>
+        </div>
       </div>
       <a class ="contacts__map" href="#"><img class="contacts__img" src="img/map-mobile@1x.jpg" width="320" height="457" alt="Интернет магазин «Мишка» расположен по адресу г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101"></a>
       <a class="button contacts__button-feedback" href="feedback-form.html">Напишите нам</a>
