Добавляет модификатор к логотипу

--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="page-header">
     <div class="page-header__wrapper">
-      <a class="page-header__logo">
+      <a class="page-header__logo page-header__logo--main">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина «Мишка»">
       </a>
       <div class="page-header__nav main-nav main-nav--closed main-nav--nojs">
