Вносит необходимые блоки в разметку

--- a/source/index.html
+++ b/source/index.html
@@ -23,10 +23,10 @@
               <a class="site-nav__link" href="form.html">Вязание на заказ</a>
             </li>
             <li class="site-nav__item site-nav__item--desktop">
-              <a class="site-nav__link" href="form.html">Новые поступления</a>
+              <a class="site-nav__link site-nav__link--desktop" href="form.html">Новые поступления</a>
             </li>
             <li class="site-nav__item site-nav__item--desktop">
-              <a class="site-nav__link" href="form.html">Распродажа</a>
+              <a class="site-nav__link site-nav__link--desktop" href="form.html">Распродажа</a>
             </li>
           </ul>
         </nav>
