добавляет стили для заголовка

--- a/source/index.html
+++ b/source/index.html
@@ -54,7 +54,7 @@
   </header>
 
   <main class="page-main">
-    <h1 class="page-main__title">Милые штучки ручной работы для дома</h1>
+    <h1 class="page-main__title">Милые штуки ручной<br> работы для дома</h1>
     <section class="product-categories">
       <h2 class="visually-hidden">Категории товаров</h2>
       <ul class="product-categories__list product-list">
