добавляет тег <tbody>

--- a/source/index.html
+++ b/source/index.html
@@ -78,30 +78,32 @@
       </header>
       <p class="product-week__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
       <table class="product-week__list-description table-description">
-        <tr class="product-week__row table-description__row">
-          <td class="product-week__column1 table-description__column1">
-            Цвет:
-          </td>
-          <td class="product-week__column2 table-description__column2">
-            «Тиффани»/серый
-          </td>
-        </tr>
-        <tr class="product-week__row table-description__row">
-          <td  class="product-week__column1 table-description__column1">
-            Диаметр:
-          </td>
-          <td  class="product-week__column2 table-description__column2">
-            25 см
-          </td>
-        </tr>
-        <tr class="product-week__row table-description__row">
-          <td  class="product-week__column1 table-description__column1">
-            Высота:
-          </td>
-          <td class="product-week__column2 table-description__column2">
-            15 см
-          </td>
-        </tr>
+        <tbody>
+          <tr class="product-week__row table-description__row">
+            <td class="product-week__column1 table-description__column1">
+              Цвет:
+            </td>
+            <td class="product-week__column2 table-description__column2">
+              «Тиффани»/серый
+            </td>
+          </tr>
+          <tr class="product-week__row table-description__row">
+            <td  class="product-week__column1 table-description__column1">
+              Диаметр:
+            </td>
+            <td  class="product-week__column2 table-description__column2">
+              25 см
+            </td>
+          </tr>
+          <tr class="product-week__row table-description__row">
+            <td  class="product-week__column1 table-description__column1">
+              Высота:
+            </td>
+            <td class="product-week__column2 table-description__column2">
+              15 см
+            </td>
+          </tr>
+        </tbody>
       </table>
       <img class="product-week__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Изображение вязаных корзинок">
       <p class="product-week__price">Цена: 990 руб.</p>
