--- a/source/index.html
+++ b/source/index.html
@@ -116,19 +116,19 @@
         <li class="write-us__item write-us__item--flower">
           <p class="write-us__item-title">Экологически чистые материалы</p>
         </li>
-        <li class="write-us__item write-us__item--cash">
+        <li class="write-us__item write-us__item--money">
           <p class="write-us__item-title">Скандинавский стиль по российской цене</p>
         </li>
         <li class="write-us__item write-us__item--heart">
           <p class="write-us__item-title">Увеличивает лайки на фотографиях</p>
         </li>
-        <li class="write-us__item write-us__item--clew">
+        <li class="write-us__item write-us__item--ball">
           <p class="write-us__item-title">Связано вручную с любовью и умилением</p>
         </li>
         <li class="write-us__item write-us__item--rocket">
           <p class="write-us__item-title">Поддержка отечественного производителя</p>
         </li>
-        <li class="write-us__item write-us__item--present">
+        <li class="write-us__item write-us__item--gift">
           <p class="write-us__item-title">Поставляется в подарочной упаковке</p>
         </li>
       </ul>
