Добавляет в разметку дополнительные обертки колнка 1 и 2

--- a/source/index.html
+++ b/source/index.html
@@ -113,24 +113,28 @@
     <section class="write-us">
       <h2 class="write-us__title">Коротко о нас:</h2>
       <ul class="write-us__list">
-        <li class="write-us__item write-us__item--flower">
-          <p class="write-us__item-title">Экологически чистые материалы</p>
-        </li>
-        <li class="write-us__item write-us__item--money">
-          <p class="write-us__item-title">Скандинавский стиль по российской цене</p>
-        </li>
-        <li class="write-us__item write-us__item--heart">
-          <p class="write-us__item-title">Увеличивает лайки на фотографиях</p>
-        </li>
-        <li class="write-us__item write-us__item--ball">
-          <p class="write-us__item-title">Связано вручную с любовью и умилением</p>
-        </li>
-        <li class="write-us__item write-us__item--rocket">
-          <p class="write-us__item-title">Поддержка отечественного производителя</p>
-        </li>
-        <li class="write-us__item write-us__item--gift">
-          <p class="write-us__item-title">Поставляется в подарочной упаковке</p>
-        </li>
+        <div class="write-us__column1">
+          <li class="write-us__item write-us__item--flower">
+            <p class="write-us__item-title">Экологически<br> чистые материалы</p>
+          </li>
+          <li class="write-us__item write-us__item--money">
+            <p class="write-us__item-title">Скандинавский стиль<br> по российской цене</p>
+          </li>
+          <li class="write-us__item write-us__item--heart">
+            <p class="write-us__item-title">Увеличивает лайки<br> на фотографиях</p>
+          </li>
+        </div>
+        <div class="write-us__column2">
+          <li class="write-us__item write-us__item--ball">
+            <p class="write-us__item-title">Связано вручную с<br> любовью и умилением</p>
+          </li>
+          <li class="write-us__item write-us__item--rocket">
+            <p class="write-us__item-title">Поддержка отечественного производителя</p>
+          </li>
+          <li class="write-us__item write-us__item--gift">
+            <p class="write-us__item-title">Поставляется в<br> подарочной упаковке</p>
+          </li>
+        </div>
       </ul>
     </section>
 
