Исправляет ошибки валидации

--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина «Мишка»">
       </a>
       <div class="page-header__nav main-nav main-nav--closed main-nav--nojs">
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</button>
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <nav class="main-nav__site site-nav">
           <ul class="site-nav__list">
             <li class="site-nav__item">
@@ -113,28 +113,32 @@
     <section class="write-us">
       <h2 class="write-us__title">Коротко о нас:</h2>
       <ul class="write-us__list">
-        <div class="write-us__column1">
-          <li class="write-us__item write-us__item--flower">
-            <p class="write-us__item-title">Экологически<br> чистые материалы</p>
-          </li>
-          <li class="write-us__item write-us__item--money">
-            <p class="write-us__item-title">Скандинавский стиль<br> по российской цене</p>
-          </li>
-          <li class="write-us__item write-us__item--heart">
-            <p class="write-us__item-title">Увеличивает лайки<br> на фотографиях</p>
-          </li>
-        </div>
-        <div class="write-us__column2">
-          <li class="write-us__item write-us__item--ball">
-            <p class="write-us__item-title">Связано вручную с<br> любовью и умилением</p>
-          </li>
-          <li class="write-us__item write-us__item--rocket">
-            <p class="write-us__item-title">Поддержка отечественного производителя</p>
-          </li>
-          <li class="write-us__item write-us__item--gift">
-            <p class="write-us__item-title">Поставляется в<br> подарочной упаковке</p>
-          </li>
-        </div>
+        <li class="write-us__column1">
+          <ul class="write-us__column1-list">
+            <li class="write-us__item write-us__item--flower">
+              <p class="write-us__item-title">Экологически<br> чистые материалы</p>
+            </li>
+            <li class="write-us__item write-us__item--money">
+              <p class="write-us__item-title">Скандинавский стиль<br> по российской цене</p>
+            </li>
+            <li class="write-us__item write-us__item--heart">
+              <p class="write-us__item-title">Увеличивает лайки<br> на фотографиях</p>
+            </li>
+          </ul>
+        </li>
+        <li class="write-us__column2">
+          <ul class="write-us__column2-list">
+            <li class="write-us__item write-us__item--ball">
+              <p class="write-us__item-title">Связано вручную с<br> любовью и умилением</p>
+            </li>
+            <li class="write-us__item write-us__item--rocket">
+              <p class="write-us__item-title">Поддержка отечественного производителя</p>
+            </li>
+            <li class="write-us__item write-us__item--gift">
+              <p class="write-us__item-title">Поставляется в<br> подарочной упаковке</p>
+            </li>
+          </ul>
+        </li>
       </ul>
     </section>
 
