--- a/source/index.html
+++ b/source/index.html
@@ -150,7 +150,7 @@
             <cite class="reviews__author-name">Анастасия Красильникова
               <span class="reviews__author-email">@misssssiskras</span>
             </cite>
-            <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+            <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и&nbsp;мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
           </blockquote>
         </div>
         <p class="reviews__buttons slider__buttons">
