Добавляет ссылке href, добавляет антиперенос

--- a/source/index.html
+++ b/source/index.html
@@ -170,10 +170,10 @@
         <h2 class="contacts__title">Контакты</h2>
         <div class="contacts__list">
           <p class="contacts__email">e-mail:
-            <a>info@mimimishkashop.ru</a>
+            <a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
           </p>
           <p class="contacts__address">адрес:
-            <span>г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</span>
+            <span>г. Санкт-Петербург, ул. Большая Конюшенная, д.&nbsp;19/8, офис 101</span>
           </p>
         </div>
       </div>
