Добавляет запрет переноса

--- a/source/index.html
+++ b/source/index.html
@@ -173,7 +173,7 @@
             <a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
           </p>
           <p class="contacts__address">адрес:
-            <span>г. Санкт-Петербург, ул. Большая Конюшенная, д.&nbsp;19/8, офис 101</span>
+            <span>г. Санкт-Петербург,<br> ул. Большая Конюшенная, д.&nbsp;19/8, офис 101</span>
           </p>
         </div>
       </div>
