Добавление класса согласно методологии БЭМ

--- a/source/form.html
+++ b/source/form.html
@@ -146,7 +146,7 @@
         <label class="form__legend field-info__legend">Доп</label>
         <textarea class="form__field field-info__field" name="additional-info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
       </div>
-      <div class="form__wrapper--center">
+      <div class="form__wrapper form__wrapper--center">
         <p class="form__notice">*Поля обязательны для заполнения</p>
         <button class="button form__button" type="submit">Отправить заказ</button>
       </div>
