--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,11 @@
   <header class="page-header">
     <div class="page-header__wrapper">
       <a class="page-header__logo" href="index.html" title="Ссылка на главную страницу">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина «Мишка»">
+        <picture>
+          <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="page-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина «Мишка»">
+        </picture>
       </a>
       <div class="page-header__nav main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -60,7 +64,11 @@
       <ul class="catalog__list">
         <li class="catalog__item item">
           <a class="item__link">
-            <img class="item__image" src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="Фотография игрушки Зайчик-попрыгайчик">
+            <picture class="item__image-box">
+              <source media="(min-width: 1150px)" srcset="img/photo-hare-desktop@1x.jpg, img/photo-hare-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.jpg, img/photo-hare-tablet@2x.jpg 2x">
+              <img class="item__image" src="img/photo-hare-mobile@1x.jpg" srcset="img/photo-hare-mobile@2x.jpg 2x" width="260" height="195" alt="Фотография игрушки Зайчик-попрыгайчик">
+            </picture>
             <div class="item__header-box">
               <div class="item__header">
                 <h3 class="item__title">Зайчик-попрыгайчик</h3>
@@ -76,7 +84,11 @@
         </li>
         <li class="catalog__item item">
           <a class="item__link">
-            <img class="item__image" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Фотография вязаной корзинки для белья">
+            <picture class="item__image-box">
+              <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg, img/photo-bowl-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg, img/photo-bowl-tablet@2x.jpg 2x">
+              <img class="item__image" src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@2x.jpg 2x" width="260" height="195" alt="Фотография вязаной корзинки для белья">
+            </picture>
             <div class="item__header-box">
               <div class="item__header">
                 <h3 class="item__title">Корзинка для белья</h3>
@@ -92,7 +104,11 @@
         </li>
         <li class="catalog__item item">
           <a class="item__link">
-            <img class="item__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Фотография большой вязаной корзинки для игрушек">
+            <picture class="item__image-box">
+              <source media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.jpg, img/photo-toys-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.jpg, img/photo-toys-tablet@2x.jpg 2x">
+              <img class="item__image" src="img/photo-toys-mobile@1x.jpg" srcset="img/photo-toys-mobile@2x.jpg" width="260" height="195" alt="Фотография большой вязаной корзинки для игрушек">
+            </picture>
             <div class="item__header-box">
               <div class="item__header">
                 <h3 class="item__title">Большая корзинка для игрушек</h3>
