--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,11 @@
   <header class="page-header">
     <div class="page-header__wrapper">
       <a class="page-header__logo page-header__logo--main">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина «Мишка»">
+        <picture>
+          <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="page-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина «Мишка»">
+        </picture>
       </a>
       <div class="page-header__nav main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -105,7 +109,11 @@
           </tr>
         </tbody>
       </table>
-      <img class="product-week__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Изображение вязаных корзинок">
+      <picture>
+        <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg, img/triple-set-desktop@2x.jpg 2x">
+        <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg, img/triple-set-tablet@2x.jpg 2x">
+        <img class="product-week__image" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" width="260" height="315" alt="Изображение вязаных корзинок">
+      </picture>
       <p class="product-week__price">Цена: 990 руб.</p>
       <button class="product-week__order" type="button">Заказать</button>
     </section>
